--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,15 @@
 <nb-layout>
 
-  <nb-layout-header>
-  <!-- Insert header here -->
-  </nb-layout-header>
+<!--  <nb-layout-header>-->
+<!--  &lt;!&ndash; Insert header here &ndash;&gt;-->
+<!--  </nb-layout-header>-->
+
+  <nb-sidebar>
+    <app-side-menu></app-side-menu>
+  </nb-sidebar>
 
   <nb-layout-column>
-
+    <router-outlet></router-outlet>
   </nb-layout-column>
 
   <nb-layout-footer>
