Add admin card component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,7 @@
 <!--  </nb-layout-header>-->
 
   <nb-sidebar>
+    <app-admin-card></app-admin-card>
     <app-side-menu></app-side-menu>
   </nb-sidebar>
 
