Add admin logged card

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,9 @@
 <!--  </nb-layout-header>-->
 
   <nb-sidebar>
-    <app-admin-card></app-admin-card>
+    <app-admin-card
+      [title]="'Administrator'"
+      [name]="'Admin'"></app-admin-card>
     <app-side-menu></app-side-menu>
   </nb-sidebar>
 
