--- a/src/themes.scss
+++ b/src/themes.scss
@@ -1,6 +1,8 @@
 @forward '@nebular/theme/styles/theming';
 @use '@nebular/theme/styles/theming' as *;
 @use '@nebular/theme/styles/themes/default';
+@use '@nebular/theme/styles/themes/dark';
+@use '@nebular/theme/styles/themes/cosmic';
 
 $nb-themes: nb-register-theme((
 
