Add statistics component

--- a/src/app/statistics/statistics.component.html
+++ b/src/app/statistics/statistics.component.html
@@ -1,1 +1,30 @@
-
+<div class="statistic-container" *ngIf="{
+  shopStatistics: shopStatistics$ | async
+} as data">
+  <nb-tabset fullWidth>
+    <nb-tab tabTitle="По Магазинам">
+      <div class="shop-header">
+        <nb-card>
+          <nb-card-body>
+            <div class="body-container">
+              <div class="shop-s" (click)="setShopSortField('name')">Магазин</div>
+              <div class="bank-profit-s" (click)="setShopSortField('totalBankProfit')">Прибыль банка</div>
+              <div class="purchases-number-s" (click)="setShopSortField('purchasesNumber')">Общее кол-во покупок</div>
+            </div>
+          </nb-card-body>
+        </nb-card>
+      </div>
+      <div *ngFor="let shop of data.shopStatistics | sortShopStatistics:shopSortField; let i = index">
+        <app-shop-statistics
+          [status]="i % 2 ? 'success' : 'primary'"
+          [purchasesNumber]="shop.purchasesNumber"
+          [totalBankProfit]="shop.totalBankProfit"
+          [name]="shop.name">
+        </app-shop-statistics>
+      </div>
+    </nb-tab>
+    <nb-tab tabTitle="По Категориям">
+      <p>List of <strong>orders</strong>.</p>
+    </nb-tab>
+  </nb-tabset>
+</div>
