Add base category statistics component

--- a/src/app/statistics/statistics.component.html
+++ b/src/app/statistics/statistics.component.html
@@ -1,7 +1,11 @@
 <div class="statistic-container" *ngIf="{
-  shopStatistics: shopStatistics$ | async
+  shopStatistics: shopStatistics$ | async,
+  categoryStatistics: categoryStatistics$ | async
 } as data">
   <nb-tabset fullWidth>
+    <nb-tab tabTitle="Общая">
+      <app-general-statistics></app-general-statistics>
+    </nb-tab>
     <nb-tab tabTitle="По Магазинам">
       <div class="shop-header">
         <nb-card>
@@ -24,7 +28,25 @@
       </div>
     </nb-tab>
     <nb-tab tabTitle="По Категориям">
-      <p>List of <strong>orders</strong>.</p>
+      <div class="category-header">
+        <nb-card>
+          <nb-card-body>
+            <div class="body-container">
+              <div class="category-s" (click)="setShopSortField('name')">Магазин</div>
+              <div class="bank-profit-s" (click)="setShopSortField('totalBankProfit')">Прибыль банка</div>
+              <div class="purchases-number-s" (click)="setShopSortField('purchasesNumber')">Общее кол-во покупок</div>
+            </div>
+          </nb-card-body>
+        </nb-card>
+      </div>
+      <div *ngFor="let shop of data.categoryStatistics | sortShopStatistics:shopSortField; let i = index">
+        <app-category-statistics
+          [status]="i % 2 ? 'success' : 'primary'"
+          [purchasesNumber]="shop.purchasesNumber"
+          [totalBankProfit]="shop.totalBankProfit"
+          [name]="shop.name">
+        </app-category-statistics>
+      </div>
     </nb-tab>
   </nb-tabset>
 </div>
