--- a/src/app/statistics/statistics.component.scss
+++ b/src/app/statistics/statistics.component.scss
@@ -8,7 +8,8 @@
           display: flex;
           align-items: center;
 
-          .shop-s{
+          .shop-s,
+          .category-s {
             display: flex;
             justify-content: center;
             width: 50%;
@@ -20,6 +21,7 @@
           }
 
           .shop-s,
+          .category-s,
           .bank-profit-s,
           .purchases-number-s {
             height: 100%;
