--- a/src/app/users/users.component.scss
+++ b/src/app/users/users.component.scss
@@ -8,6 +8,12 @@
       position: fixed;
       left: 0;
       padding-left: 300px;
+
+      ::ng-deep {
+        input {
+          font-weight: 400;
+        }
+      }
     }
   }
 
@@ -31,6 +37,13 @@
 
     .block-button {
       width: 40%;
+    }
+  }
+
+  ::ng-deep {
+    nb-card {
+      border-radius: 20px;
+      box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
     }
   }
 }
