--- a/src/app/shared/components/shop-card/shop-card.component.scss
+++ b/src/app/shared/components/shop-card/shop-card.component.scss
@@ -14,5 +14,14 @@ nb-card {
   & div {
     text-align: center;
     width: 25%;
+    & span {
+      padding: 0 5px;
+    }
+  }
+}
+
+.inc-dec {
+  & button:nth-last-child {
+    padding-right: 15px;
   }
 }
