--- a/src/app/shops/shops.component.html
+++ b/src/app/shops/shops.component.html
@@ -1,7 +1,7 @@
 <nb-card class="search-container">
       <nb-form-field>
         <nb-icon nbPrefix icon="search-outline" pack="eva"></nb-icon>
-        <input type="search" [fullWidth]="true" nbInput>
+        <input type="search" [fullWidth]="true" nbInput [(ngModel)]="shopSearch">
       </nb-form-field>
 </nb-card>
 
@@ -14,7 +14,7 @@
   </nb-card-body>
 </nb-card>
 
-<div *ngFor="let shop of shopsWithCashBack$ | async; index as i">
+<div *ngFor="let shop of shopsWithCashBack$ | async | filterArrayByValue:shopSearch: 'shopName'; index as i">
   <app-shop-card
     [status]="i % 2 ? 'success' : 'primary'"
     [shopName]="shop.shopName"
