Update styles for statistics

--- a/src/app/statistics/statistics.component.html
+++ b/src/app/statistics/statistics.component.html
@@ -32,7 +32,7 @@
         <nb-card>
           <nb-card-body>
             <div class="body-container">
-              <div class="category-s" (click)="setShopSortField('name')">Магазин</div>
+              <div class="category-s" (click)="setShopSortField('name')">Категория</div>
               <div class="bank-profit-s" (click)="setShopSortField('totalBankProfit')">Прибыль банка</div>
               <div class="purchases-number-s" (click)="setShopSortField('purchasesNumber')">Общее кол-во покупок</div>
             </div>
