--- a/src/app/shops/shops.component.scss
+++ b/src/app/shops/shops.component.scss
@@ -6,4 +6,11 @@
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+  & div {
+      height: 100%;
+      cursor: pointer;
+      &:hover {
+        color: dodgerblue;
+      }
+  }
 }
