--- a/src/app/shared/components/shop-card/shop-card.component.html
+++ b/src/app/shared/components/shop-card/shop-card.component.html
@@ -29,4 +29,9 @@
                         evaIconName="arrow-ios-downward-outline"></app-arrow-button>
     </div>
   </nb-card-body>
+  <nb-card-footer>
+<!--    // TODO: submit & reset-->
+    <app-arrow-button textBeforeIcon="Reset" [isDisable]="true"></app-arrow-button>
+    <app-arrow-button textBeforeIcon="Submit" [isDisable]="true"></app-arrow-button>
+  </nb-card-footer>
 </nb-card>
